[project]
name = "line-oa-messages"
version = "0.1.0"
description = "POC: receive LINE Official Account webhook events (FastAPI), store users/messages/replies in SQLite, and view them on a live NiceGUI dashboard."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "lumduan", email = "bad.sonsuk@gmail.com" }]
keywords = ["line", "messaging-api", "webhook", "fastapi", "nicegui", "sqlite", "uv", "docker"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi>=0.115",
    "nicegui>=2.8",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "pydantic-settings>=2.4",
    "line-bot-sdk>=3.17",
    "httpx>=0.27",
]

[dependency-groups]
dev = [
    "ruff>=0.6",
    "mypy>=1.10",
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "pre-commit>=3.7",
    "bandit>=1.7",
    "pip-audit>=2.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
mypy_path = "src"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
addopts = ["--cov=src", "--cov-report=term-missing", "--cov-fail-under=80"]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.bandit]
exclude_dirs = ["tests", ".venv", "scripts"]

[tool.uv]
default-groups = ["dev"]
